tests/NormalTests/paczka2/big_fuzzy/60210368.err
Error in line 1: r89UHIr S424 75,8
Error in line 2: r89UHIr A531 44,2
Error in line 19: r89UHIr S424 31,32
Error in line 26: A531 S719 85,5
Error in line 34: A531 S692 95,3
Error in line 33: X6aaxnNjKU S424 36,7
Error in line 25: 7NHcTg0ZHj S424 206,2
Error in line 36: X6aaxnNjKU S719 84,8
Error in line 22: r89UHIr S424 35,6
Error in line 49: A531 S719 89,6
Error in line 62: A531 A531 62,3
Error in line 64: 7NHcTg0ZHj S719 14,8
Error in line 61: r89UHIr S424 30,8
Error in line 66: P1T S424 3,9
Error in line 44: 4d4mFB A531 94,5
Error in line 79: r89UHIr A531 54,9
Error in line 70: P1T S692 2,1
Error in line 60: CBD7T S719 308,6
Error in line 99: CBD7T S692 42,42
Error in line 94: P1T S692 47,4
Error in line 89: CBD7T S692 18,6
Error in line 106: CBD7T A531 138,6
Error in line 111: 4d4mFB A531 60,9
Error in line 88: 7NHcTg0ZHj S719 58,9
Error in line 118: 7NHcTg0ZHj S424 86,9
Error in line 123: 7NHcTg0ZHj S692 46,4
Error in line 127: 7NHcTg0ZHj A531 55,5
Error in line 110: CBD7T S692 98,8
Error in line 141: 7NHcTg0ZHj S719 54,7
Error in line 152: r89UHIr S719 30,9
Error in line 156: 4d4mFB S692 98,9
Error in line 158: CBD7T S6d2 d5,6
Error in line 155: r89UHIr S692 39,2
Error in line 153: CBD7T S719 33,0
Error in line 168: CBD7T A531 80,4
Error in line 169: P1T S424 63,9
Error in line 173: A531 A531 243,4
Error in line 184: 7NHcTg0ZHj S692 77,3
Error in line 192: 7NHcTg0ZHj 692 46,2
Error in line 190: 7NHcTg0ZHj A531 33,9
Error in line 196: X6aaxnNjKU A531 50,9
Error in line 197: 7NHcTg0ZHj S692 125,7
Error in line 191: P1T S719 4,3
Error in line 212: A531 S719 111,1
Error in line 214: A531 S424 52,2
Error in line 219: CBD7T S692 -1,8
Error in line 221: 4d4mFB S71q 153,6
Error in line 206: CBD7T S692 10,6
Error in line 218: r89UHIr S719 79,9
Error in line 217: 4d4mFB S719 97,2
Error in line 234: CBD7T A531 215,6
Error in line 237: CBD7T S692 92,0
Error in line 244: X6aaxnNjKU S719 47,9
Error in line 249: r89UHIr S692 -4,5
